<resources>
    <string name="app_name">Can Blog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register"><u>Register</u></string>
    <string name="login"><u>Login</u></string>
    <string name="slogan">the Real Sun is inside of you</string>
    <string name="rights">© 2020 All Rights Reserved.</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Refih CAN</string>
    <string name="reply_title">a Software Developer</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--Navigation Drawer Items-->
    <string name="search">SEARCH</string>
    <string name="codes">CODES</string>
    <string name="orders">ORDERS</string>
    <string name="full_stack_android">Full Stack Android</string>
    <string name="full_stack_ios">Full Stack iOS</string>
    <string name="front_end_mobile">Front-End Mobile</string>
    <string name="flutter">Flutter</string>
    <string name="others">Others</string>
    <string name="general">General</string>
    <string name="categories">Categories</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="drawer">Drawer</string>
    <string name="notifications">Notifications</string>

    <!--Profile Page Items-->
    <string name="flutter_developer">Flutter Developer</string>
    <string name="at_emlak_konut_bank">at Emlak Konut Bank</string>
    <string name="feb_20_may_20">Feb:20 - May:20</string>
    <string name="at_tv8_television_channel">at TV8 Television Channel</string>
    <string name="it_mobile_developer">IT-Mobile Developer</string>
    <string name="at_true_software">at True Software</string>
    <string name="mobile_developer">Mobile Developer</string>
    <string name="at_besiktas_municipality">at Besiktas Municipality</string>
    <string name="it_android_developer">IT-Android Developer</string>
    <string name="jul_19_aug_19">Jul:19 - Aug:19</string>
    <string name="jan_18_may_18">Jan:18 - May:18</string>
    <string name="jun_16_jul_16">Jun:16 - Jul:16</string>
    <string name="gmail">refihcan@gmail.com</string>
    <string name="tel_number">+90 5394234347</string>
    <string name="brand">Android Developer</string>
    <string name="name">Refih Can</string>
    <string name="location">Istanbul, Turkey</string>
    <string name="android_brand">Full Stack Android Developing</string>
    <string name="flutter_brand">Flutter Cross Developing</string>
    <string name="github_link"><a href='https://www.github.com/canrefih'>Github</a></string>
    <string name="linkedin_link"><a href='https://www.linkedin.com/in/refih-can-55640b19a/'>Linked In</a></string>
    <string name="instagram_link"><a href='https://www.instagram.com/canrefih/'>Instagram</a></string>
    <string name="facebook_link"><a href='https://www.facebook.com/refik.can.12/'>Facebook</a></string>
    <string name="my_desc">A calm guy with full of animal, music, work love.\nA character with beyond of humanity. Not less than this, even much more.   </string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa.</string>
    <string name="policy"><b>Privacy Policy and Terms</b>\n\nYour privacy is important to us. It is canrefih\'s policy to respect your privacy regarding any information we may collect from you through our app, Can Blog.\n\nWe only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.\n\nWe only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorised access, disclosure, copying, use or modification.\n\nWe don’t share any personally identifying information publicly or with third-parties, except when required to by law.\n\nOur app may link to external sites that are not operated by us. Please be aware that we have no control over the content and practices of these sites, and cannot accept responsibility or liability for their respective privacy policies.\n\nYou are free to refuse our request for your personal information, with the understanding that we may be unable to provide you with some of your desired services.\n\nYour continued use of our app will be regarded as acceptance of our practices around privacy and personal information. If you have any questions about how we handle user data and personal information, feel free to contact us.\n\nThis policy is effective as of 30 September 2020.</string>
</resources>